--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
         <p>Advanced analysis of ATL transformations</p>
 
         <ul>
-          <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/binaries/anatlyzer-0.1.0.zip">Download <strong>anATLyzer</strong></a></li>
+          <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/binaries/anatlyzer-0.3.0.zip">Download <strong>anATLyzer</strong></a></li>
 
           <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/sites/anatlyzer.updatesite">or use the<strong>Update site</strong></a></li>
 
@@ -42,6 +42,7 @@ There is still little documentation, but the following resources are available:
 <ul>
 <li><a href="installation.html">Installation</a> </li>
 <li><a href="usage.html">Basic usage</a> </li>
+<li><a href="quickfixes.html">Quick fixes</a> </li>
 </ul>
 </p>
 
