--- a/web/usage.html
+++ b/web/usage.html
@@ -20,7 +20,7 @@
          <p>Advanced analysis of ATL transformations</p>
 
         <ul>
-          <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/binaries/anatlyzer-0.1.0.zip">Download <strong>anATLyzer</strong></a></li>
+          <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/binaries/anatlyzer-0.3.0.zip">Download <strong>anATLyzer</strong></a></li>
 
           <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/sites/anatlyzer.updatesite">or use the<strong>Update site</strong></a></li>
 
@@ -52,6 +52,13 @@ with an<span class="atlyzer">atl</span>yzer just do the following:
 <p>
 Every ATL file in the project will be statically analysed every time it is saved,
 and errors will be reported in the problem view.
+</p>
+
+<p>
+It is highly recommended to use the anATLyzer view, which provides more
+information about the problems in the active transformation, including
+actions to run the constraint solver, quick fix problems and visualization.
+To do so, Window -> Show View -> anATLyzer -> Analysis View. 
 </p>
 
     </section>
