* Version 0.3.5, featuring speculative quick fixes

--- a/web/quickfixes.html
+++ b/web/quickfixes.html
@@ -60,7 +60,8 @@ our experiments.
     <section>
 
 <h3><a name="screencast" class="anchor" href="#screencast"><span class="octicon octicon-link"></span></a>Screencast</h3>
-To be done.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/54-XjAkE4rw" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section>
@@ -108,12 +109,12 @@ Step 2: Foreach P in Lp
 </ul>
 
 <p>
-  The <a href="data/models2015/quickfixes_experiment.zip">anatlyzer.evaluation.quickfixes</a> project includes two .exp files to easily run the experiments. For example, open quickfixes_test.exp, select the Result tab, and press Execute. After a few minutes, the results will appear in the text editor. The experiment over the mutated transformations may take more than 30 minutes.
+  The <a href="data/sosym2015/quickfixes_experiment.zip">anatlyzer.evaluation.quickfixes.sosym2015</a> project includes four .exp files to easily run the experiments. For example, open ant2maven.exp, select the Result tab, and press Execute. After a few minutes, the results will appear in the text editor and can be exported to Excel. The experiments may take between 10 minutes and 60 minutes.
  </p>
 <p>
 	To run the experiments Eclipse must be configured to run with
-	a heap space of at least 2 GB. You must change eclipse.ini adding
-        <code>-Xms1024m -Xmx2048m</code>.
+	a heap space of at least 4 GB. You must change eclipse.ini adding
+        <code>-Xms2048m -Xmx4096m</code>.
 <p>
 
 </section>
