--- a/web/quickfixes_models.html
+++ b/web/quickfixes_models.html
@@ -59,7 +59,8 @@ our experiments.
     <section>
 
 <h3><a name="screencast" class="anchor" href="#screencast"><span class="octicon octicon-link"></span></a>Screencast</h3>
-To be done.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dm7ma4De5jw" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section>
