Changes in problem classification UI improvement in AnalysisView Added experiments.html to the web

--- a/web/quickfixes.html
+++ b/web/quickfixes.html
@@ -20,7 +20,7 @@
          <p>Advanced analysis of ATL transformations</p>
 
         <ul>
-          <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/binaries/anatlyzer-0.3.0.zip">Download <strong>anATLyzer</strong></a></li>
+          <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/binaries/anatlyzer.zip">Download <strong>anATLyzer</strong></a></li>
 
           <li><a href="http://sanchezcuadrado.es/projects/anatlyzer/sites/anatlyzer.updatesite">or use the<strong>Update site</strong></a></li>
 
