--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@ There is still little documentation, but the following resources are available:
 <li><a href="installation.html">Installation</a> </li>
 <li><a href="usage.html">Basic usage</a> </li>
 <li><a href="quickfixes.html">Quick fixes</a> </li>
+<li><a href="adv.html">Analysis of target constraints</a> </li>
 </ul>
 </p>
 
