added more info in the web page

--- a/web/index.html
+++ b/web/index.html
@@ -31,9 +31,21 @@
         <h3>
 <a name="welcome-to-bento" class="anchor" href="#welcome-to-bento"><span class="octicon octicon-link"></span></a>Welcome to anATLyzer</h3>
 
-<p><strong>anATLyzer</strong> is an extension of the ATL IDE to provide
-advanced analysis of ATL transformations.
+<p><strong>AnATLyzer</strong> is an extension of the ATL IDE to provide
+advanced analysis of ATL transformations. It has a number of features
+intended to increase the correctness of the transformations and the
+productivity of the developers:
 </p>
+<ul>
+<li>Static typing of the ATL programs</li>
+<li>Detection of more than 50 kinds of problems</li>
+<li>Error markers and a special analysis view</li> 
+<li>Support for pre-conditions and post-conditions</li>
+<li>A large catalogue of quick fixes</li>
+<li>Visualizations of rule relationships</li>
+<li>Integration with the standard ATL editor</li>
+<li>A programmatic API to easily manipulated typed ATL programs</li>
+</ul>
 
 <h3>
 <a name="documentation" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Documentation</h3>
